# pagaya-home-assignment

./: .gitignore  CONVERSATION_TRANSCRIPT.md  PLANNING.md  README.md  docker-compose.yml  export_codex_transcripts.py
backend/: .env.example  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_task_results.py
backend/app/: celery_app.py  main.py
backend/app/api/: dependencies.py  queues.py  router.py  task_results.py  tasks.py  workers.py
backend/app/core/: config.py  database.py  enums.py
backend/app/models/: __init__.py  base.py  queue.py  task.py  task_result.py
backend/app/repositories/: __init__.py  filters.py  queues.py  task_results.py  tasks.py
backend/app/schemas/: common.py  queue.py  task.py  task_result.py  worker.py
backend/app/services/: dispatcher.py  errors.py  query.py  queues.py  task_execution.py  task_results.py  tasks.py  unit_of_work.py  workers.py
backend/app/task_handlers/: cancellation.py  jobs.py  registry.py
backend/tests/: conftest.py  test_api_lifecycle.py  test_model_constructors.py  test_payload_validation.py  test_worker_imports.py  test_worker_inspection.py
docs/: Pagaya Home assignment.docx
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: api-workflows.spec.ts
frontend/src/: App.tsx  config.ts  dataProvider.ts  main.tsx
frontend/src/components/: AppLayout.tsx  JsonField.tsx  NotificationCenter.tsx
(+3 files in other folders)
