[project]
name = "pagaya-queue-manager"
version = "0.1.0"
description = "Queue management assignment backend"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.13.2",
    "celery[redis]>=5.4.0",
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

